fix collapsing grid issue

--- a/styles/main.css
+++ b/styles/main.css
@@ -318,6 +318,10 @@ header {
   cursor: pointer;
 }
 
+.far.fa-file-pdf {
+  padding-right: .5rem;
+}
+
 
 #toggle, .nav, .hamburger {
   display: none;
@@ -363,7 +367,7 @@ a {
 @media screen and (min-width:1224px) {
 
   .grid-wrapper {
-    grid-template-columns: minmax(5rem, auto) repeat(12, [row] 8rem) minmax(5rem, auto);
+    grid-template-columns: 1fr repeat(12, [row] 8rem) 1fr;
 }
 
 }
@@ -1687,7 +1691,7 @@ box-shadow: 0 1rem 2rem 0 rgb(207, 213, 230)
   .problem-solution {
     grid-column: 1 / -1;
     display: grid;
-    grid-template-columns: minmax(5rem, auto) repeat(12, [row] 8rem) minmax(5rem, auto);
+    grid-template-columns: 1fr repeat(12, [row] 8rem) 1fr;
     grid-column-gap: 2rem;
     padding: 3rem 0;
     margin: 5rem 0;
@@ -1720,7 +1724,7 @@ box-shadow: 0 1rem 2rem 0 rgb(207, 213, 230)
   }
 
   .discovery {
-    grid-template-columns: minmax(5rem, auto) repeat(12, [row] 8rem) minmax(5rem, auto);
+    grid-template-columns: 1fr repeat(12, [row] 8rem) 1fr;
   }
 
   .persona-1 {
@@ -1755,7 +1759,7 @@ box-shadow: 0 1rem 2rem 0 rgb(207, 213, 230)
   }
 
   .sketching {
-    grid-template-columns: minmax(5rem, auto) repeat(12, [row] 8rem) minmax(5rem, auto);
+    grid-template-columns: 1fr repeat(12, [row] 8rem) 1fr;
   }
 
   .hifi-1 {
@@ -1768,7 +1772,7 @@ box-shadow: 0 1rem 2rem 0 rgb(207, 213, 230)
   }
 
   .crit-iteration {
-      grid-template-columns: minmax(5rem, auto) repeat(12, [row] 8rem) minmax(5rem, auto);
+      grid-template-columns: 1fr repeat(12, [row] 8rem) 1fr;
   }
 
   .usability-testing li {
@@ -1776,7 +1780,7 @@ box-shadow: 0 1rem 2rem 0 rgb(207, 213, 230)
   }
 
   .finishing-touches {
-    grid-template-columns: minmax(5rem, auto) repeat(12, [row] 8rem) minmax(5rem, auto);
+    grid-template-columns: 1fr repeat(12, [row] 8rem) 1fr;
   }
 
   .logo-final {
@@ -1795,7 +1799,7 @@ box-shadow: 0 1rem 2rem 0 rgb(207, 213, 230)
   }
 
   .conclusion {
-    grid-template-columns: minmax(5rem, auto) repeat(12, [row] 8rem) minmax(5rem, auto);
+    grid-template-columns: 1fr repeat(12, [row] 8rem) 1fr;
   }
 
 
